# comm-gtk

./: Cargo.toml  LICENSE  Makefile  README.md
assets/macos/Comm.app/Contents/: Info.plist
assets/macos/Comm.app/Contents/MacOS/: launcher
resources/: style.css
src/: controllers.rs  main.rs  models.rs  views.rs
