[package]
name = "comm-gtk"
version = "0.1.0"
authors = ["Zac Stewart <zgstewart@gmail.com>"]

[dependencies.comm]
#path = "../comm-rs"
git = "https://github.com/zacstewart/comm.git"

[dependencies]
env_logger = "0.4.3"
gdk = "0.5.3"
gio = "0.1.3"
glib = "0.1.3"
log = "0.3.8"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_22"]
